# datadetox

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  BATCH_TESTING.md  CONTRIBUTING.md  DOCKER_SETUP.md  README.md  batch_test.sh  docker-compose.yml  download_model_doc.sh  package-lock.json  package.json  search_neo4j_sample.py  test_backend_responses.py
.github/workflows/: deploy.yml  (+2 more)
backend/: .coverage  .dockerignore  Dockerfile  README.md  coverage.xml  main.py  pyproject.toml  pytest.ini  test_api_response.py
backend/.hypothesis/constants/: 200f608308334e9c  5747b8a5ffa8da46  a139b02c2da7ba11  bc6ea4a832cdafa3  dd4f8dfc41180abb  f7cb07d1b30185ce
backend/agents/: prompts.py
backend/agents/1_eclair_hf/: eclair_hf_agent.py
backend/batch_testing/: .gitignore  README.md  STRUCTURE.md  batch_test.py
backend/datadetox_agents/: arxiv_helper.py  hf_helper.py  rag.py  rag_cli.py  search_agent.py
backend/datadetox_agents/prompts/: prompt.py
backend/routers/: client.py
backend/routers/search/: __init__.py  agent.py
backend/routers/search/utils/: ARXIV_DATASET_EXTRACTION.md  __init__.py  arxiv_extractor.py  arxiv_llm_extractor.py  dataset_resolver.py  dataset_risk.py  extract_datasets.py  huggingface.py  search_neo4j.py  tool_state.py
backend/tests/: test_arxiv_extraction.py  test_client.py  test_huggingface.py  test_search_neo4j.py  test_tool_state.py
backend/tests/integration/: __init__.py  test_api_flow.py  test_neo4j_integration.py
deployment/: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  docker-shell.sh  docker_config.json
docs/: milestone4.md
frontend/: .dockerignore  Dockerfile  README.md  coverage.json  index.html  package-lock.json  package.json  start-frontend-container.sh  tailwind.config.ts  vite.config.ts  vitest.config.ts
mcp/: hf_mcp.py
model-lineage/: .coverage  .dockerignore  .gitignore  Dockerfile  QUICKSTART.md  README.md  coverage.json  coverage.xml  lineage_scraper.py  pyproject.toml
model-lineage/config/: __init__.py  settings.py
model-lineage/graph/: __init__.py  builder.py  models.py  neo4j_client.py
model-lineage/scrapers/: __init__.py  huggingface_scraper.py  model_parser.py
model-lineage/storage/: __init__.py  data_store.py
model-lineage/tests/: test_data_store.py  test_huggingface_scraper.py
model-lineage/tests/integration/: __init__.py  test_pipeline.py
neo4j/: Dockerfile  README.md
rag/: Dockerfile  README.md  pyproject.toml  rag_cli.py
(+64 files in other folders)
