[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.1",
    "google-cloud-storage==3.4.1",
    "openai-agents>=0.3.3",
    "google-cloud-storage>=2.10.0",
    "arxiv>=2.1.0",
    "pymupdf>=1.24.0",
    "rich>=13.0.0",
    "fastapi[standard]>=0.121.3",
    "fastmcp>=2.13.1",
]
