[project]
name = "rag-cli"
version = "0.1.0"
description = "RAG CLI for document ingestion and querying"
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.1",
    "chromadb>=1.1.1",
    "llama-index>=0.14.4",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
